fixed filter overflow bug

--- a/public/styles.css
+++ b/public/styles.css
@@ -86,7 +86,6 @@
 
 .filter-container{
     align-items: center;
-    overflow: auto;
     justify-content: space-between;
 }
 
